<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_dialog_1"
    android:background="#FB9898"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/UpperTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Insert record"
                android:textColor="@color/black"
                android:textSize="20sp">

            </TextView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/alertll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alert0"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_height="61dp"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heartrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Heart Rate"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alert1"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/systolic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Systolic Pressure"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alert2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diastole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Diastolic Pressure"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImgDate"

                    />

                <TextView
                    android:id="@+id/datetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date:"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alertll1"
        android:id="@+id/alertll3">
        <EditText
            android:hint="DD"
            android:id="@+id/date"
            android:inputType="numberDecimal"

            android:layout_width="60dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="/"


            />
        <EditText
            android:hint="MM"
            android:id="@+id/month"
            android:layout_width="60dp"
            android:inputType="numberDecimal"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/year"
            android:text="/"

            />
        <EditText
            android:hint="YYYY"
            android:id="@+id/yearedit"
            android:inputType="numberDecimal"
            android:layout_width="100dp"
            android:layout_height="50dp"/>



    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AlertLL5"
            android:layout_below="@id/alertll3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ImgClc"/>

            <TextView

                android:id="@+id/timetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alertll3"
                android:text="Time:"
                android:textSize="20sp" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alertll4"
        android:layout_below="@id/AlertLL5"
        android:orientation="horizontal">

        <EditText

            android:hint="HH"
            android:id="@+id/hour"
            android:inputType="numberDecimal"
            android:layout_width="60dp"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text=":"

            android:textSize="30sp"

            />
        <EditText
            android:hint="MM"
            android:id="@+id/minute"
            android:inputType="numberDecimal"
            android:layout_width="60dp"
            android:layout_height="50dp"/>
        <TextView

            android:layout_width="wrap_content"
            android:id="@+id/AP"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=":"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="60dp"

            android:layout_height="40dp"
            android:spinnerMode="dropdown"

            android:layout_weight="1" />


    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CommentL"
            android:layout_below="@id/alertll4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="61dp"

            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comment"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/CommentL">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_centerHorizontal="true"

                    android:backgroundTint="@android:color/background_dark"
                    android:text="CANCEL"
                    app:cornerRadius="50dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/Add"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_centerHorizontal="true"


                    android:backgroundTint="@android:color/background_dark"
                    android:text="CONFIRM"
                    app:cornerRadius="50dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

            </RelativeLayout>




        </LinearLayout>

    </RelativeLayout>





</ScrollView>