<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homepage"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FB9898"
    tools:context=".homepage">

    <!-- Heading -->
    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Last Measured"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp" />

    <!-- First TextView with Label -->
    <TextView
        android:id="@+id/label1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Heart Bit : "
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/headingTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_toEndOf="@id/label1TextView"
        android:layout_alignBaseline="@id/label1TextView" />

    <!-- Second TextView with Label -->
    <TextView
        android:id="@+id/label2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Systolic : "
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/label1TextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/TxtSystole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_toEndOf="@id/label2TextView"
        android:layout_alignBaseline="@id/label2TextView" />

    <!-- Third TextView with Label -->
    <TextView
        android:id="@+id/label3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dyastolic : "
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/label2TextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/TxtDayastole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_toEndOf="@id/label3TextView"
        android:layout_alignBaseline="@id/label3TextView" />

    <!-- Buttons at the Bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="400dp"
        android:id="@+id/llgd"
        >

        <Button
            android:id="@+id/add_new"
            android:layout_width="10dp"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add New" />

        <Button
            android:id="@+id/stat"
            android:layout_width="10dp"
            android:layout_marginLeft="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Prev rec." />

    </LinearLayout>

</RelativeLayout>
