...
        app:errorEnabled="true"
        app:boxStrokeColor="#FA6161"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EMAIL"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

...

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:text="LOG IN"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
